# redpill

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  ideas.txt
crates/redpill-agent/: Cargo.toml
crates/redpill-agent/src/: connection.rs  lib.rs  protocol.rs
crates/redpill-agent/tests/: integration_tests.rs
logo/: icon.icns
src/: app.rs  config.rs  lib.rs  main.rs
src/kubernetes/: client.rs  config.rs  exec.rs  mod.rs
src/session/: credentials.rs  manager.rs  mod.rs  models.rs  storage.rs
src/sftp/: browser.rs  mod.rs
src/terminal/: events.rs  k8s_backend.rs  keys.rs  mod.rs  ssh_backend.rs  ssm_backend.rs  terminal.rs
src/ui/: agent_panel.rs  delete_confirm_dialog.rs  group_dialog.rs  main_window.rs  mod.rs  quit_confirm_dialog.rs  search_bar.rs  session_dialog.rs  session_tree.rs  sftp_panel.rs  split_container.rs  ssm_session_dialog.rs  terminal_tabs.rs  terminal_view.rs  text_field.rs
tests/: app_tests.rs  test_utils.rs
