[workspace]
members = ["crates/redpill-agent"]
resolver = "2"

[package]
name = "redpill-term"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "A cross-platform GUI terminal application with SSH session management"
authors = ["RedPill Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vyrti/redpill"
homepage = "https://github.com/vyrti/redpill"
documentation = "https://docs.rs/redpill-term"
keywords = ["terminal", "ssh", "gui", "emulator", "tui"]
categories = ["command-line-utilities", "gui", "network-programming"]
exclude = [
    ".github/",
    ".gitignore",
    "*.md",
    "!README.md",
]

[lib]
name = "redpill"
path = "src/lib.rs"

[[bin]]
name = "redpill"
path = "src/main.rs"

[dependencies]
redpill-agent = { path = "crates/redpill-agent" }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Terminal Emulation
alacritty_terminal = "0.25"
portable-pty = "0.8"

# SSH
russh = "0.56"
russh-sftp = "2.1"
russh-keys = "0.49"
ssh-key = { version = "0.6", features = ["std"] }

# AWS SSM Session Manager
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.101"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
sha2 = "0.10"

# Kubernetes
kube = { version = "3.0.0", features = ["client", "config", "ws", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Pin rand_core to fix crypto RC compatibility
rand_core = { version = "=0.10.0-rc-3" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-channel = "2"      # async channels for GPUI integration

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
smallvec = "1.13"
regex-lite = "0.1"

# Secure credential storage
keyring = "3"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
# Force consistent versions from servo/core-foundation-rs at core-text v21.0.0
# This ensures core-text, core-foundation, and core-graphics all use compatible versions
core-text = { git = "https://github.com/servo/core-foundation-rs", rev = "b10f1efc48343fc5590127ec6d890ffbb8b5bd02" }
core-foundation = { git = "https://github.com/servo/core-foundation-rs", rev = "b10f1efc48343fc5590127ec6d890ffbb8b5bd02" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", rev = "b10f1efc48343fc5590127ec6d890ffbb8b5bd02" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", rev = "b10f1efc48343fc5590127ec6d890ffbb8b5bd02" }
core-graphics-types = { git = "https://github.com/servo/core-foundation-rs", rev = "b10f1efc48343fc5590127ec6d890ffbb8b5bd02" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0
strip = true